# FME

./: .gitmodules  CMakeLists.txt  FMECmdBase.cpp  FMECmdBase.h  FMECommandsEngine.cpp  FMECommandsEngine.h  FMECommandsParser.cpp  FMECommandsParser.h  FMEMain.cpp  FMEMain.h  FMEStorage.cpp  FMEStorage.h  FMEStoragePresenter.cpp  FMEStoragePresenter.h  Readme.md  main.cpp
Google_tests/: CMakeLists.txt  test_main.cpp  test_parse_commands.cpp  test_path_presentation.cpp  test_scripts.cpp  test_tokenize_string.cpp
tests/: test_errors.batch  test_errors_result.txt  test_make_dir_create_file_copy_file.batch  test_make_dir_create_file_copy_file_result.txt  test_make_dir_root_error.batch  test_make_dir_root_error_result.txt  test_make_file_as_dir_error.batch  test_make_file_as_dir_error_result.txt  test_move_file_to_child.batch  test_move_file_to_child_result.txt  test_move_folder.batch  test_move_folder_result.txt  test_move_folder_to_file_error.batch  test_move_folder_to_file_error_result.txt  test_move_parent_folder_to_child_error.batch  test_move_parent_folder_to_child_error_result.txt
